--- a/index.html
+++ b/index.html
@@ -1,55 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dictionary App</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Global Dictionary</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="app-container">
   <header>
-    <h1>📖 My Dictionary</h1>
+    <h1>🌍 Global Dictionary</h1>
     <button id="theme-toggle">🌙</button>
   </header>
 
-  <main>
-    <section class="search-section">
-      <div class="search-box">
-        <input type="text" id="word-input" placeholder="Enter a word...">
-        <button id="search-btn">🔍</button>
-      </div>
-    </section>
+  <section class="search-section">
+    <input type="text" id="word-input" placeholder="Type a word or continent/country">
+    <button id="search-btn">🔍 Search</button>
+  </section>
 
-    <section class="dictionary-container">
-      <!-- Word Result -->
-      <div class="result-box hidden" id="result">
-        <div class="word-header">
-          <h2 id="word"></h2>
-          <span id="phonetic"></span>
-          <button id="play-sound">🔊</button>
-          <button id="save-fav">⭐</button>
-        </div>
-        <div id="meanings"></div>
-      </div>
-
-      <!-- Sidebar -->
-      <aside class="sidebar">
-        <div class="favorites">
-          <h3>⭐ Favorites</h3>
-          <ul id="fav-list"></ul>
-        </div>
-        <div class="history">
-          <h3>🕑 Recent Searches</h3>
-          <ul id="history-list"></ul>
-        </div>
-      </aside>
-    </section>
-  </main>
+  <section class="results-section">
+    <div id="word-info">
+      <h2 id="word-title"></h2>
+      <p id="word-type"></p>
+      <p id="definition"></p>
+      <audio id="pronunciation" controls></audio>
+    </div>
+    <div id="extra-info">
+      <h3>History / Continent Info</h3>
+      <p id="continent-info"></p>
+    </div>
+  </section>
 
   <footer>
-    <p>📚 Built with ❤️ by <strong>YourName</strong></p>
+    <p>© 2025 LekwahGaret | Powered by Oxford API</p>
   </footer>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
